--- a/static/main.css
+++ b/static/main.css
@@ -11064,3 +11064,10 @@ button:focus {
             column-count: 2;
   }
 }
+
+.truncate {
+  width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
